syntax = "proto3";

option csharp_namespace = "BusinessLogic.Service.Protos";

package authorization;

service Authorization {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc SignOut (SignInRequest) returns (SignInResponse);
}


message SignInRequest {
  string phoneNumber = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}